fix the img bug in about-me wrap, move it to the bg property

--- a/assets/css/modules/_home.scss
+++ b/assets/css/modules/_home.scss
@@ -54,7 +54,6 @@
     filter: FlipH;
     -ms-filter: "FlipH";
 
-
   }
 }
 
@@ -134,12 +133,7 @@
     position: relative;
   }
   img {
-    width: 100%;
-
-    border: 5px solid $logoCircle;
-    position: absolute;
-    top: 50%;
-    left: 0;
+    display: none;
   }
   .stripe {
     top: 4px;
@@ -153,8 +147,13 @@
     margin-bottom: 5px;
   }
   .picture-about {
-    position: relative;
-    margin: 0 auto;
+    height: 400px;
+    background: url("../img/Pamela2.jpg") no-repeat center center;
+    background-size: contain;
+    @include device(xs) {
+      margin: 20px;
+      height: 200px;
+    }
 
   }
   .text-about {
